--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -102,6 +102,9 @@
         - name: Mobile Apps
           tocHref: /azure/app-service-mobile/
           topicHref: /azure/app-service-mobile/
+    - name: Azure Automanage
+      tocHref: /azure/automanage/
+      topicHref: /azure/automanage/
     - name: 静的 Web アプリ
       tocHref: /azure/static-web-apps/
       topicHref: /azure/static-web-apps/
@@ -429,6 +432,9 @@
         - name: Immersive Reader
           tocHref: /azure/cognitive-services/immersive-reader/
           topicHref: /azure/cognitive-services/immersive-reader/
+    - name: Communication Services
+      tocHref: /azure/communication-services/
+      topicHref: /azure/communication-services/
     - name: Connectors
       tocHref: /azure/connectors/
       topicHref: /azure/connectors/
@@ -564,6 +570,9 @@
         - name: シークレット
           tocHref: /azure/key-vault/secrets/
           topicHref: /azure/key-vault/secrets/
+        - name: Managed HSM
+          tocHref: /azure/key-vault/managed-hsm/
+          topicHref: /azure/key-vault/managed-hsm/
     - name: Azure Kinect DK
       tocHref: /azure/kinect-dk/
       topicHref: /azure/kinect-dk/
