--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -48,7 +48,7 @@
         - name: ASP.NET
           href: quickstart-v2-dotnet-native-aspnet.md
         - name: ASP.NET Core
-          href: 'https://docs.microsoft.com/samples/azure-samples/active-directory-dotnet-native-aspnetcore-v2/active-directory-dotnet-native-aspnetcore-v2/'
+          href: quickstart-v2-aspnet-core-web-api.md
     - name: モバイル アプリとデスクトップ アプリ
       items:
         - name: Android
@@ -445,7 +445,7 @@
           href: supported-accounts-validation.md
         - name: 単一テナント アプリとマルチテナント アプリ
           href: single-and-multi-tenant-apps.md
-        - name: 発行者の確認 (プレビュー)
+        - name: 発行元の確認
           href: publisher-verification-overview.md
     - name: アクセス許可と同意
       displayName: Scopes
@@ -553,9 +553,9 @@
           href: howto-add-terms-of-service-privacy-statement.md
         - name: アプリの発行者の確認を構成する
           items:
-            - name: アプリを発行者確認済みとしてマークする (プレビュー)
+            - name: アプリを発行者確認済みとしてマークする
               href: mark-app-as-publisher-verified.md
-            - name: 発行者確認のトラブルシューティング (プレビュー)
+            - name: 発行元の確認に関するトラブルシューティング
               href: troubleshoot-publisher-verification.md
     - name: Microsoft Authentication Library の使用
       displayName: MSAL
