--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -137,14 +137,14 @@
             - name: Azure Storage の保存時の暗号化
               href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
               items:
-                - name: Azure Key Vault でのカスタマー マネージド キー
-                  href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 要求でのカスタマー指定のキー
-                  href: ../common/encryption-customer-provided-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: カスタマー マネージド キーを使用した暗号化
+                  href: ../common/customer-managed-keys-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: カスタマー指定のキーを使用した要求での暗号化
+                  href: encryption-customer-provided-keys.md
+                - name: 暗号化スコープ
+                  href: encryption-scope-overview.md
             - name: 不変 BLOB
               href: storage-blob-immutable-storage.md
-            - name: 高度な脅威保護
-              href: ../common/storage-advanced-threat-protection.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 組み込みのセキュリティ制御
               href: ../common/storage-security-controls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure プライベート エンドポイントの使用
@@ -380,19 +380,17 @@
                   items:
                     - name: アカウントの暗号化キー モデルの確認
                       href: ../common/storage-encryption-key-model-get.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 顧客が管理する暗号化キーの構成
+                    - name: カスタマー マネージド キーによる暗号化を構成する
                       items:
-                        - name: ポータル
-                          href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                        - name: PowerShell
-                          href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                        - name: Azure CLI
-                          href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                        - name: カスタマー マネージド キーをキー コンテナーに格納する
+                          href: ../common/customer-managed-keys-configure-key-vault.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                        - name: カスタマー マネージド キーをマネージド HSM に格納する
+                          href: ../common/customer-managed-keys-configure-key-vault-hsm.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 要求での暗号化キーの指定
                   href: storage-blob-customer-provided-key.md
                 - name: 暗号化範囲の管理
                   href: encryption-scope-manage.md
-                - name: ストレージ アカウントのインフラストラクチャの暗号化を有効にする
+                - name: アカウントのインフラストラクチャ暗号化を有効にする
                   href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: クライアント側の暗号化の構成
               items:
@@ -414,6 +412,8 @@
                       href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: クライアント アプリケーションの TLS バージョンを構成する
                       href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 脅威保護のために Azure Defender を構成する
+              href: ../common/azure-defender-storage-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 不変ポリシーの設定と管理
               href: storage-blob-immutability-policies-manage.md
         - name: データの冗長性を管理する
@@ -749,7 +749,7 @@
           items:
             - name: AzCopy
               items:
-                - name: はじめに
+                - name: 作業開始
                   href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: Data Lake Storage の使用
                   href: ../common/storage-use-azcopy-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
