--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -10,24 +10,34 @@
       items:
         - name: はじめに
           href: get-started.md
+          displayName: 'get, started'
         - name: 1 Synapse ワークスペースを作成する
           href: get-started-create-workspace.md
+          displayName: 'get, started'
         - name: 2 SQL プールを使用して分析する
           href: get-started-analyze-sql-pool.md
+          displayName: 'get, started'
         - name: 3 Spark を使用して分析する
           href: get-started-analyze-spark.md
+          displayName: 'get, started'
         - name: 4 SQL オンデマンドを使用して分析する
           href: get-started-analyze-sql-on-demand.md
+          displayName: 'get, started'
         - name: 5 ストレージ アカウント内のデータを分析する
           href: get-started-analyze-storage.md
+          displayName: 'get, started'
         - name: 6 パイプラインを使用したオーケストレーション
           href: get-started-pipelines.md
+          displayName: 'get, started'
         - name: 7 Power BI で視覚化する
           href: get-started-visualize-power-bi.md
+          displayName: 'get, started'
         - name: 8 監視する
           href: get-started-monitor.md
+          displayName: 'get, started'
         - name: 9 Knowledge Center を調べる
           href: get-started-knowledge-center.md
+          displayName: 'get, started'
     - name: チート シート
       href: overview-cheat-sheet.md
     - name: よく寄せられる質問
@@ -48,16 +58,16 @@
       href: quickstart-power-bi.md
     - name: プールを作成する
       items:
-        - name: Web ツールを使用して Apache Spark ノートブックを作成する
-          href: quickstart-apache-spark-notebook.md
-        - name: Azure portal を使用して Apache Spark プールを作成する
-          href: quickstart-create-apache-spark-pool-portal.md
-        - name: Synapse Studio を使用して Apache Spark プールを作成する
-          href: quickstart-create-apache-spark-pool-studio.md
-        - name: Azure portal を使用して SQL プールを作成する
-          href: quickstart-create-sql-pool-portal.md
         - name: Synapse Studio を使用して SQL プールを作成する
           href: quickstart-create-sql-pool-studio.md
+        - name: Azure portal を使用して SQL プールを作成する
+          href: quickstart-create-sql-pool-portal.md
+        - name: ノートブックを作成する
+          href: quickstart-apache-spark-notebook.md
+        - name: Azure portal を使用して Spark プールを作成する
+          href: quickstart-create-apache-spark-pool-portal.md
+        - name: Synapse Studio を使用して Spark プールを作成する
+          href: quickstart-create-apache-spark-pool-studio.md
     - name: SQL プールを使用したデータの読み込み
       items:
         - name: COPY ステートメント
