--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -39,6 +39,10 @@
       href: powershell-samples.md
 - name: 概念
   items:
+    - name: リージョン間のロード バランサー
+      href: cross-region-overview.md
+    - name: 新機能
+      href: whats-new.md
     - name: コンポーネント
       href: components.md
     - name: 概念
