--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -234,6 +234,12 @@
           items:
             - name: PerfInsights を使用する方法
               href: how-to-use-perfinsights-linux.md
+- name: 共有イメージ ギャラリーのトラブルシューティングを行う
+  items:
+    - name: 共有イメージ ギャラリーのトラブルシューティングを行う - Windows
+      href: ../windows/troubleshooting-shared-images.md
+    - name: 共有イメージ ギャラリーのトラブルシューティングを行う - Linux
+      href: ../linux/troubleshooting-shared-images.md
 - name: VM 拡張機能の問題
   items:
     - name: Azure 拡張機能の概要
