--- a/articles/azure-arc/toc.yml
+++ b/articles/azure-arc/toc.yml
@@ -8,3 +8,7 @@
   href: ./servers/overview.md
 - name: Arc 対応 Kubernetes >
   href: ./kubernetes/overview.md
+- name: Arc 対応データ サービス (プレビュー) >
+  href: ./data/overview.md
+- name: Arc 対応 SQL Server (プレビュー) >
+  href: 'https://docs.microsoft.com/sql/sql-server/azure-arc/overview'
