--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -70,7 +70,7 @@
     - name: 保存時の暗号化
       href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: カスタマー マネージド キーを使用した保存時の暗号化
-      href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+      href: ../common/customer-managed-keys-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: スケーラビリティとパフォーマンスのターゲット
       href: storage-files-scale-targets.md
     - name: コンプライアンス認証
@@ -243,18 +243,16 @@
           items:
             - name: アカウントの暗号化キー モデルの確認
               href: ../common/storage-encryption-key-model-get.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-            - name: 顧客が管理する暗号化キーの構成
+            - name: カスタマー マネージド キーによる暗号化を構成する
               items:
-                - name: ポータル
-                  href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-                - name: PowerShell
-                  href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-                - name: Azure CLI
-                  href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: ストレージ アカウントのインフラストラクチャの暗号化を有効にする
+                - name: カスタマー マネージド キーをキー コンテナーに格納する
+                  href: ../common/customer-managed-keys-configure-key-vault.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+                - name: カスタマー マネージド キーをマネージド HSM に格納する
+                  href: ../common/customer-managed-keys-configure-key-vault-hsm.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: アカウントのインフラストラクチャ暗号化を有効にする
           href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 高度な脅威保護
-          href: ../common/storage-advanced-threat-protection.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 脅威保護のために Azure Defender を構成する
+          href: ../common/azure-defender-storage-configure.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: ファイアウォールと仮想ネットワークの構成
           href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 安全な転送が必要
