--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -61,10 +61,14 @@
       items:
         - name: あらかじめ用意されているテンプレートから作成する
           href: logic-apps-create-logic-apps-from-templates.md
+        - name: 自動タスクを作成して Azure リソースを管理する
+          href: create-automation-tasks-azure-resources.md
         - name: BizTalk Services から移行する
           href: logic-apps-move-from-mabs.md
         - name: Power Automate からフローをエクスポートして Azure Logic Apps にデプロイする
           href: export-from-microsoft-flow-logic-app-template.md
+        - name: Visual Studio Code でステートフルまたはステートレスなワークフローを作成する
+          href: create-stateful-stateless-workflows-visual-studio-code.md
         - name: ワークフローの実行のコントロール
           items:
             - name: 条件付きステートメント
@@ -166,8 +170,8 @@
               href: logic-apps-enterprise-integration-edifact-decode.md
             - name: UNH2.5 セグメントが含まれた EDIFACT ファイルの処理
               href: logic-apps-enterprise-integration-edifact_inputfile_unh2.5.md
-        - name: RosettaNet メッセージの交換
-          href: logic-apps-enterprise-integration-rosettanet.md
+            - name: RosettaNet メッセージの交換
+              href: logic-apps-enterprise-integration-rosettanet.md
         - name: X12 メッセージの交換
           href: logic-apps-enterprise-integration-x12.md
           items:
@@ -312,7 +316,7 @@
         - name: Logic Apps を管理する - Visual Studio
           href: manage-logic-apps-with-visual-studio.md
         - name: 統合アカウントを管理する
-          href: ./logic-apps-enterprise-integration-create-integration-account.md
+          href: logic-apps-enterprise-integration-create-integration-account.md
         - name: 統合サービス環境を管理する
           href: ise-manage-integration-service-environment.md
         - name: ロジック アプリのリソースを移動する
@@ -329,7 +333,7 @@
           href: logic-apps-azure-resource-manager-templates-overview.md
         - name: Logic Apps テンプレートの作成
           href: logic-apps-create-azure-resource-manager-templates.md
-        - name: Logic Apps テンプレートのデプロイ
+        - name: ロジック アプリ テンプレートのデプロイ
           href: logic-apps-deploy-azure-resource-manager-templates.md
     - name: モニター
       items:
